--- a/SecureSkyScholars/requirements.txt
+++ b/SecureSkyScholars/requirements.txt
@@ -1,5 +1,5 @@
-pip install requests
-pip install Django
-pip install mysql-client
-pip install mysqlclient
-pip install fcm_django
+requests
+Django
+mysql-client
+mysqlclient
+fcm_django
